Fix compilations problems